# django_coursework

./: .env.sample  README.md  all_data.json  groups_fixture.json  pyproject.toml  send_dist.py  код для рассылки
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_of_view.py  0003_alter_blog_text.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
distribution/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
distribution/management/commands/: sending_mail.py
distribution/migrations/: 0001_initial.py  0002_alter_client_comment.py  0002_distributionparams_date_end_and_more.py  0002_initial.py  0003_alter_mailingsettings_options.py  0004_client_owner.py
distribution/templates/distribution/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  clients_confirm_delete.html  clients_detail.html  clients_form.html  clients_list.html  distributionparams_confirm_delete.html  distributionparams_detail.html  distributionparams_form.html  distributionparams_list.html  log_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  mailingsettings_update_form.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_remove_user_is_content_manager.py  0004_remove_user_avatar.py
(+9 files in other folders)
