[tool.poetry]
name = "django-course-6"
version = "0.1.0"
description = ""
authors = ["Khitrov <Hitrov.95@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pytils = "^0.4.1"
django-apscheduler = "^0.6.2"
django = "4.2"
pillow = "^10.2.0"
redis = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
